Add colors to webapp UI

--- a/webapp/src/ionicapp/SCSS/ionic.app.scss
+++ b/webapp/src/ionicapp/SCSS/ionic.app.scss
@@ -13,6 +13,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 .widget_button {
 	width: 48% !important;
+	height: 100px;
 }
 
 .message_textarea {
