--- a/webapp/src/ionicapp/www/templates/addDevice.html
+++ b/webapp/src/ionicapp/www/templates/addDevice.html
@@ -21,6 +21,6 @@
         <input type="text" placeholder="My IoT Device" ng-model="data.devicename">
       </label>
     </form>
-    <button id="addDevice-button55" ng-click="submit()" class="button button-dark button-block">SAVE</button>
+    <button id="addDevice-button55" ng-click="submit()" class="button button-positive button-block">SAVE</button>
   </ion-content>
 </ion-view>
