--- a/webapp/src/ionicapp/www/templates/confirmPhoneNumber.html
+++ b/webapp/src/ionicapp/www/templates/confirmPhoneNumber.html
@@ -14,7 +14,7 @@
         </label>
       </ion-list>
       <div class="spacer" style="height: 10px;"></div>
-      <button id="confirmPhoneNumber-button34" ng-click="submit()" class="button button-dark button-block">Submit</button>
+      <button id="confirmPhoneNumber-button34" ng-click="submit()" class="button button-positive button-block">Submit</button>
       <button id="confirmPhoneNumber-button35" ng-click="submitResend()" class="button button-positive button-small button-block button-clear">Didn't get code? Resend OTP</button>
       <button id="confirmPhoneNumber-button37" ng-click="submitCancel()" class="button button-positive button-small button-block button-clear">Cancel</button>
     </form>
