--- a/webapp/src/ionicapp/www/templates/history.html
+++ b/webapp/src/ionicapp/www/templates/history.html
@@ -23,7 +23,7 @@
         <span class="input-label">End</span>
         <input type="text" placeholder="YYYY-MM-DD HH:MM:SS" ng-model="date.end">
       </label>
-      <button id="history-button33" ng-click="applyFilter(deviceidx, directionidx, topicidx)" class="button button-dark button-block">Apply</button>
+      <button id="history-button33" ng-click="applyFilter(deviceidx, directionidx, topicidx)" class="button button-positive button-block">Apply</button>
     </form>
     <div id="history-markdown61" class="show-list-numbers-and-dots">
       <p style="color:#000000;font-size:16px;">Result: {{ items.length }} transactions</p>
