--- a/webapp/src/ionicapp/www/templates/login.html
+++ b/webapp/src/ionicapp/www/templates/login.html
@@ -14,7 +14,7 @@
           <input type="password" placeholder="" ng-model="data.password">
         </label>
       </ion-list>
-      <button id="login-button5" ng-click="submit()" class="button button-dark button-block">LOGIN</button>
+      <button id="login-button5" ng-click="submit()" class="button button-positive button-block">LOGIN</button>
       <a ui-sref="recover()" id="login-button8" class="button button-dark button-block button-clear">Forgot your password?</a>
       <div class="spacer" style="width: 300px; height: 20px;"></div>
       <div id="login-markdown28" style="text-align:center;" class="show-list-numbers-and-dots">
