--- a/webapp/src/ionicapp/www/templates/menu.html
+++ b/webapp/src/ionicapp/www/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="true">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-light">
+    <ion-nav-bar class="bar-positive">
       <ion-nav-back-button></ion-nav-back-button>
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
@@ -8,35 +8,31 @@
     </ion-nav-bar>
     <ion-nav-view name="side-menu21"></ion-nav-view>
   </ion-side-menu-content>
-  <ion-side-menu side="left" id="side-menu21" style="background-color:#FFFFFF;">
+  <ion-side-menu side="left" id="side-menu21" style="background-color:#387EF5;">
     <ion-content padding="false" style="top:0px !important;" class="side-menu-left ">
-      <div class="spacer" style="width: 268px; height: 33px;"></div>
+      <div class="spacer" style="width: 268px; height: 34px;"></div>
       <div id="menu-markdown8" style="text-align:center;" class="show-list-numbers-and-dots">
-        <p style="color:#444444;font-size:18px;">
+        <p style="color:#FFFFFF;font-size:18px;">
           <strong> {{ data.username }} </strong>
         </p>
       </div>
       <ion-list id="menu-list1" class="manual-list-fullwidth">
-        <ion-item class="item-icon-left dark" id="menu-list-item2" ui-sref="menu.account({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
+        <ion-item class="item-icon-left positive" id="menu-list-item2" ui-sref="menu.account({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
           <i class="icon ion-person"></i>Account</ion-item>
-        <ion-item class="item-icon-left dark" id="menu-list-item1" ui-sref="menu.devices({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
+        <ion-item class="item-icon-left positive" id="menu-list-item1" ui-sref="menu.devices({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
           <i class="icon ion-ios-keypad"></i>Devices</ion-item>
-        <ion-item class="item-icon-left dark" id="menu-list-item18" ui-sref="menu.history({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
+        <ion-item class="item-icon-left positive" id="menu-list-item18" ui-sref="menu.history({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
           <i class="icon ion-android-clipboard"></i>History</ion-item>
-        <ion-item class="item-icon-left dark" id="menu-list-item4" ui-sref="menu.settings()" menu-close="">
-          <i class="icon ion-settings"></i>Settings</ion-item>
-        <ion-item class="item-icon-left dark" id="menu-list-item17" ui-sref="menu.help()" menu-close="">
-          <i class="icon ion-help-circled"></i>Help</ion-item>
-        <ion-item class="item-icon-left dark" id="menu-list-item3" ng-click="submitLogout()">
+        <ion-item class="item-icon-left positive" id="menu-list-item4" ui-sref="menu.helpSupport({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
+          <i class="icon ion-help-circled"></i>Help &amp; Support</ion-item>
+        <ion-item class="item-icon-left positive" id="menu-list-item17" ui-sref="menu.about({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
+          menu-close="">
+          <i class="icon ion-settings"></i>About</ion-item>
+        <ion-item class="item-icon-left positive" id="menu-list-item5" ui-sref="menu.feedback({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
+          <i class="icon ion-android-checkbox-outline"></i>Feedback</ion-item>
+        <ion-item class="item-icon-left positive" id="menu-list-item3" ng-click="submitLogout()">
           <i class="icon ion-log-out"></i>Logout</ion-item>
       </ion-list>
-      <div class="spacer" style="width: 268px; height: 30px;"></div>
-      <div id="menu-markdown9" style="text-align:center;" class="show-list-numbers-and-dots">
-        <p style="color:#444444;">
-          <strong>Terms of Services</strong> and
-          <strong>Privacy Policy</strong>
-        </p>
-      </div>
     </ion-content>
   </ion-side-menu>
 </ion-side-menus>
