--- a/webapp/src/ionicapp/www/templates/order.html
+++ b/webapp/src/ionicapp/www/templates/order.html
@@ -10,7 +10,7 @@
         <select ng-model="data.id" ng-options="credit.id as credit.label for credit in credits"></select>
       </label>
     </form>
-    <button id="order-button13" ng-click="submitBuycredits()" class="button button-dark button-block">Pay via Paypal</button>
+    <button id="order-button13" ng-click="submitBuycredits()" class="button button-positive button-block">Pay via Paypal</button>
     <div id="order-markdown29" style="text-align:center;" class="show-list-numbers-and-dots">
       <p style="color:#000000;">Paypal Test buyer account</p>
 
