--- a/webapp/src/ionicapp/www/templates/signup.html
+++ b/webapp/src/ionicapp/www/templates/signup.html
@@ -26,7 +26,7 @@
           <input type="password" placeholder="Min 6 chars" ng-model="data.password2">
         </label>
       </ion-list>
-      <button id="signup-button7" ng-click="submit()" class="button button-dark button-block">SIGN UP</button>
+      <button id="signup-button7" ng-click="submit()" class="button button-positive button-block">SIGN UP</button>
       <div id="signup-markdown31" style="text-align:center;" class="show-list-numbers-and-dots">
         <p style="color:#BBBBBB;font-size:12px;">By signing up for an account, you are agreeing with our
           <strong>Terms and Conditions</strong> and
