--- a/webapp/src/ionicapp/www/templates/viewDevice.html
+++ b/webapp/src/ionicapp/www/templates/viewDevice.html
@@ -6,31 +6,30 @@
     <button class="button button-icon icon ion-trash-b" ng-click="deleteDevice()"></button>
   </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
+    <div class="spacer" style="width: 300px; height: 12px;"></div>
     <div id="viewDevice-markdown13" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#444444;font-size:18px;">{{ data.devicename }}</p>
+      <p style="color:#444444;font-size:18px;">
+        <strong> {{ data.devicename }} </strong>
+      </p>
     </div>
     <form id="viewDevice-form24" class="list">
       <label class="item item-input" id="viewDevice-input35" name="input-deviceid">
         <span class="input-label">UUID</span>
         <input type="text" placeholder="" ng-model="data.deviceid" readonly="">
       </label>
-    </form>
-    <form id="viewDevice-form27" class="list">
       <label class="item item-input" id="viewDevice-input58" name="input-serialnumber">
         <span class="input-label">Serial Number</span>
         <input type="text" placeholder="" ng-model="data.serialnumber" readonly="">
       </label>
-    </form>
-    <form id="viewDevice-form31" class="list">
       <label class="item item-input" id="viewDevice-input59" name="input-timestamp">
         <span class="input-label">Registration Date</span>
         <input type="text" placeholder="" ng-model="data.timestamp" readonly="">
       </label>
     </form>
-    <button id="viewDevice-button21" ng-click="getDevice()" class="button button-energized button-block">Query Device</button>
-    <button id="viewDevice-button56" ng-click="setDevice(&quot;restart&quot;)" class="button button-positive button-block">Restart Device</button>
-    <button id="viewDevice-button64" ng-click="setDevice(&quot;start&quot;)" class="button button-balanced button-block">Start Device</button>
-    <button id="viewDevice-button57" ng-click="setDevice(&quot;stop&quot;)" class="button button-assertive button-block">Stop Device</button>
-    <button id="viewDevice-button46" ng-click="configureDevice()" class="button button-dark button-block">Configure Device</button>
+    <button id="viewDevice-button46" ng-click="configureDevice()" class="button button-positive button-block">Configure Device</button>
+    <button id="viewDevice-button21" ng-click="getDevice()" style="text-align:left;" class="button button-positive button-block button-outline icon-right ion-android-arrow-dropright">Query Device</button>
+    <button id="viewDevice-button56" ng-click="setDevice(&quot;restart&quot;)" style="text-align:left;" class="button button-positive button-block button-outline icon-right ion-android-arrow-dropright">Restart Device</button>
+    <button id="viewDevice-button64" ng-click="setDevice(&quot;start&quot;)" style="text-align:left;" class="button button-positive button-block button-outline icon-right ion-android-arrow-dropright">Start Device</button>
+    <button id="viewDevice-button57" ng-click="setDevice(&quot;stop&quot;)" style="text-align:left;" class="button button-positive button-block button-outline icon-right ion-android-arrow-dropright">Stop Device</button>
   </ion-content>
 </ion-view>
