--- a/webapp/src/ionicapp/www/templates/changePassword.html
+++ b/webapp/src/ionicapp/www/templates/changePassword.html
@@ -19,7 +19,7 @@
         </label>
       </ion-list>
       <div class="spacer" style="height: 10px;"></div>
-      <button id="changePassword-button40" ng-click="submit()" class="button button-dark button-block">SAVE</button>
+      <button id="changePassword-button40" ng-click="submit()" class="button button-positive button-block">SAVE</button>
       <div class="spacer" style="height: 10px;"></div>
       <button id="changePassword-button41" ng-click="submitCancel()" class="button button-positive button-small button-block button-clear">Cancel</button>
     </form>
