--- a/webapp/src/ionicapp/www/templates/configureDevice.html
+++ b/webapp/src/ionicapp/www/templates/configureDevice.html
@@ -3,10 +3,10 @@
     <button class="button button-icon icon ion-android-close" ng-click="exitPage()"></button>
   </ion-nav-buttons>
   <ion-nav-buttons side="right" class="has-header">
-    <button class="button button-icon icon ion-refresh" ng-click="getStatus()"></button>
+    <button class="button button-positive icon ion-refresh" ng-click="getStatus()"></button>
   </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
-    <button id="configureDevice-button43" ng-click="getDevice()" class="button button-light button-large button-block icon-right ion-android-settings">{{ data.devicename }}</button>
+    <button id="configureDevice-button43" ng-click="getDevice()" style="font-weight:600;font-size:18px;" class="button button-positive button-block button-clear icon-right ion-android-settings">{{ data.devicename }}</button>
     <div id="configureDevice-markdown30" ng-click="getDevice()" style="text-align:center;" class="show-list-numbers-and-dots">
       <p style="color:#444444;font-size:12px;">UUID: {{ data.deviceid }}</p>
     </div>
@@ -19,16 +19,11 @@
     <div id="configureDevice-markdown16" ng-click="getDevice()" style="text-align:center;" class="show-list-numbers-and-dots">
       <p style="color:#444444;font-size:12px;">Status: {{ data.devicestatus }}</p>
     </div>
-    <div class="spacer" style="width: 300px; height: 10px;"></div>
-    <div id="configureDevice-markdown33" class="show-list-numbers-and-dots">
-      <hr>
-    </div>
     <div class="spacer" style="height: 20px;"></div>
-    <button id="configureDevice-button20" ng-click="submitUART()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;" class="button button-dark button-large button-outline widget_button">UART</button>
-    <button id="configureDevice-button52" ng-click="submitGPIO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;" class="button button-dark button-large button-outline widget_button">GPIO</button>
+    <button id="configureDevice-button20" ng-click="submitUART()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large button-outline widget_button">UART</button>
+    <button id="configureDevice-button52" ng-click="submitGPIO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large button-outline widget_button">GPIO</button>
     <div class="spacer" style="width: 300px; height: 7px;"></div>
-    <button id="configureDevice-button18" ng-click="submitI2C()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;" class="button button-dark button-large button-outline widget_button">I2C</button>
-    <button id="configureDevice-button22" ng-click="submitNotifications()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:14px;text-align:left;" class="button button-assertive button-large icon-right ion-android-notifications widget_button">Notification</button>
-    <div class="spacer" style="height: 5px;"></div>
+    <button id="configureDevice-button18" ng-click="submitI2C()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large button-outline widget_button">I2C</button>
+    <button id="configureDevice-button22" ng-click="submitNotifications()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" class="button button-positive button-large widget_button">Notification</button>
   </ion-content>
 </ion-view>
