--- a/webapp/src/ionicapp/www/templates/deviceI2C.html
+++ b/webapp/src/ionicapp/www/templates/deviceI2C.html
@@ -3,14 +3,14 @@
     <button class="button button-icon icon ion-android-close" ng-click="submitDeviceList()"></button>
   </ion-nav-buttons>
   <ion-nav-buttons side="right" class="has-header">
-    <button class="button button-icon icon ion-refresh" ng-click="getI2CSensors()"></button>
+    <button class="button button-positive icon ion-refresh" ng-click="getI2CSensors()"></button>
   </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 12px;"></div>
     <ion-list id="deviceI2C-list11">
       <div class="item item-body" id="deviceI2C-list-item-container5" ng-repeat="sensor in sensors" ng-click="deleteI2CSensor(sensor)">
         <div id="deviceI2C-markdown65" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#444444;font-size:18px;">
+          <p style="margin-top:0px;color:#387EF5;font-size:18px;">
             <strong> {{ sensor.sensorname }} </strong>
           </p>
         </div>
@@ -22,6 +22,6 @@
         </div>
       </div>
     </ion-list>
-    <button id="deviceI2C-button23" ng-click="addI2CDevice()" class="button button-light button-large button-block icon-right ion-android-add-circle"></button>
+    <button id="deviceI2C-button23" ng-click="addI2CDevice()" class="button button-positive button-large button-block button-clear icon-right ion-android-add-circle"></button>
   </ion-content>
 </ion-view>
