--- a/webapp/src/ionicapp/www/templates/deviceNotifications.html
+++ b/webapp/src/ionicapp/www/templates/deviceNotifications.html
@@ -15,8 +15,8 @@
         </p>
       </div>
       <div id="deviceNotifications-button-bar1" class="button-bar">
-        <button id="deviceNotifications-button48" ng-class="{'active': data.activeSection==1}" ng-click="changeSection(1)" class="button button-dark button-block">Email</button>
-        <button id="deviceNotifications-button49" ng-class="{'active': data.activeSection==2}" ng-click="changeSection(2)" class="button button-dark button-block">SMS</button>
+        <button id="deviceNotifications-button48" ng-class="{'active': data.activeSection==1}" ng-click="changeSection(1)" class="button button-positive button-small button-block">Email</button>
+        <button id="deviceNotifications-button49" ng-class="{'active': data.activeSection==2}" ng-click="changeSection(2)" class="button button-positive button-small button-block">SMS</button>
       </div>
     </form>
     <form id="deviceNotifications-form29" class="list" ng-show="data.activeSection==2">
@@ -45,6 +45,6 @@
         <select ng-options="cc.code as cc.id for cc in smsoptions" ng-model="data.smsoptionsid"></select>
       </label>
     </form>
-    <button id="deviceNotifications-button25" ng-click="submit()" class="button button-dark button-block">Submit</button>
+    <button id="deviceNotifications-button25" ng-click="submit()" class="button button-positive button-block">SUBMIT</button>
   </ion-content>
 </ion-view>
