--- a/webapp/src/ionicapp/www/templates/deviceUART.html
+++ b/webapp/src/ionicapp/www/templates/deviceUART.html
@@ -3,13 +3,13 @@
     <button class="button button-icon icon ion-android-close" ng-click="submitDeviceList()"></button>
   </ion-nav-buttons>
   <ion-nav-buttons side="right" class="has-header">
-    <button class="button button-icon icon ion-refresh" ng-click="submitQuery()"></button>
+    <button class="button button-positive icon ion-refresh" ng-click="submitQuery()"></button>
   </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
     <form id="deviceUART-form35" class="list">
       <div id="deviceUART-button-bar3" class="button-bar">
-        <button id="deviceUART-button58" ng-class="{'active': data.activeSection==1}" ng-click="changeSection(1)" class="button button-stable button-large button-block">UART 1</button>
-        <button id="deviceUART-button59" ng-class="{'active': data.activeSection==2}" ng-click="changeSection(2)" class="button button-stable button-large button-block">UART 2</button>
+        <button id="deviceUART-button58" ng-class="{'active': data.activeSection==1}" ng-click="changeSection(1)" class="button button-positive button-small button-block">UART 1</button>
+        <button id="deviceUART-button59" ng-class="{'active': data.activeSection==2}" ng-click="changeSection(2)" class="button button-positive button-small button-block">UART 2</button>
       </div>
       <label class="item item-select" id="deviceUART-select9">
         <span class="input-label">Baud Rate</span>
@@ -56,6 +56,6 @@
         <input type="text" placeholder="Device name(s)" ng-model="data.uart.notification.endpoints.modem.recipients">
       </label>
     </form>
-    <button id="deviceUART-button28" ng-click="submit()" class="button button-dark button-block">SAVE</button>
+    <button id="deviceUART-button28" ng-click="submit()" class="button button-positive button-block">SAVE</button>
   </ion-content>
 </ion-view>
