--- a/webapp/src/ionicapp/www/templates/recover.html
+++ b/webapp/src/ionicapp/www/templates/recover.html
@@ -14,7 +14,7 @@
         </label>
       </ion-list>
       <div class="spacer" style="height: 10px;"></div>
-      <button id="recover-button11" ng-click="submit()" class="button button-dark button-block">RESET PASSWORD</button>
+      <button id="recover-button11" ng-click="submit()" class="button button-positive button-block">RESET PASSWORD</button>
       <div class="spacer" style="height: 10px;"></div>
       <button id="recover-button12" ng-click="submitCancel()" class="button button-positive button-small button-block button-clear">Cancel</button>
     </form>
