--- a/webapp/src/ionicapp/www/templates/resetPassword.html
+++ b/webapp/src/ionicapp/www/templates/resetPassword.html
@@ -22,7 +22,7 @@
         </label>
       </ion-list>
       <div class="spacer" style="height: 10px;"></div>
-      <button id="resetPassword-button14" ng-click="submit()" class="button button-dark button-block">SUBMIT</button>
+      <button id="resetPassword-button14" ng-click="submit()" class="button button-positive button-block">SUBMIT</button>
       <div class="spacer" style="height: 10px;"></div>
       <button id="resetPassword-button15" ng-click="submitCancel()" class="button button-positive button-small button-block button-clear">Cancel</button>
     </form>
