--- a/webapp/src/ionicapp/www/templates/deviceI2C.html
+++ b/webapp/src/ionicapp/www/templates/deviceI2C.html
@@ -7,6 +7,9 @@
   </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 12px;"></div>
+    <div id="deviceI2C-markdown37" class="show-list-numbers-and-dots">
+      <p style="color:#AAAAAA;font-size:12px;">{{ sensors_counthdr }}</p>
+    </div>
     <ion-list id="deviceI2C-list11">
       <div class="item item-body" id="deviceI2C-list-item-container5" ng-repeat="sensor in sensors" ng-click="deleteI2CSensor(sensor)">
         <div id="deviceI2C-markdown65" class="show-list-numbers-and-dots">
