--- a/webapp/src/ionicapp/www/templates/addI2CDeviceDetails.html
+++ b/webapp/src/ionicapp/www/templates/addI2CDeviceDetails.html
@@ -13,7 +13,7 @@
       </div>
       <div id="addI2CDeviceDetails-markdown22" class="show-list-numbers-and-dots">
         <p style="color:#387EF5;font-size:18px;">
-          <strong> {{ data.sensor.manufacturer }} </strong>
+          <strong> {{ data.i2c.manufacturer }} </strong>
         </p>
       </div>
       <div class="spacer" style="height: 15px;"></div>
@@ -22,14 +22,19 @@
       </div>
       <div id="addI2CDeviceDetails-markdown23" class="show-list-numbers-and-dots">
         <p style="color:#387EF5;font-size:18px;">
-          <strong> {{ data.sensor.model }} </strong>
-        </p>
+          <strong> {{ data.i2c.model }} </strong> ({{ data.i2c.name }})</p>
+      </div>
+      <div id="addI2CDeviceDetails-markdown9" class="show-list-numbers-and-dots">
+        <p style="color:#387EF5;font-size:12px;">{{ data.i2c.desc }}</p>
+      </div>
+      <div id="addI2CDeviceDetails-markdown33" class="show-list-numbers-and-dots">
+        <p style="color:#387EF5;font-size:12px;">{{ data.i2c.link }}</p>
       </div>
     </form>
     <div id="addI2CDeviceDetails-markdown70" class="show-list-numbers-and-dots">
       <hr>
     </div>
-    <div class="spacer" style="width: 300px; height: 50px;"></div>
+    <div class="spacer" style="width: 300px; height: 15px;"></div>
     <form id="addI2CDeviceDetails-form64" class="list">
       <div id="addI2CDeviceDetails-markdown21" class="show-list-numbers-and-dots">
         <p style="color:#000000;">Provide the details below</p>
