Add heartbeat in GET STATUS

--- a/webapp/src/ionicapp/SCSS/ionic.app.scss
+++ b/webapp/src/ionicapp/SCSS/ionic.app.scss
@@ -139,6 +139,10 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 .item-detecting {
 	color: black;
 	background-color: yellow;
-	width: 60px;
+	width: 400px;
+}
+
+.item-lastactive {
+	color: black;
 }
 
