--- a/webapp/src/ionicapp/www/templates/devices.html
+++ b/webapp/src/ionicapp/www/templates/devices.html
@@ -1,6 +1,6 @@
 <ion-view title="Devices" hide-back-button="true" nav-transition="none" id="page2" style="background-color:#FFFFFF;" class="page_width">
   <ion-nav-buttons side="right" class="has-header">
-    <button class="button button-positive icon ion-refresh" ng-click="submitRefresh()"></button>
+    <button class="button button-positive icon ion-refresh" ng-click="submitRefresh(true)"></button>
   </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 12px;"></div>
