--- a/webapp/src/ionicapp/www/css/ionic.app.css
+++ b/webapp/src/ionicapp/www/css/ionic.app.css
@@ -9910,4 +9910,7 @@ a.button {
 .item-detecting {
   color: black;
   background-color: yellow;
-  width: 60px; }
+  width: 400px; }
+
+.item-lastactive {
+  color: black; }
